--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			</div>
 			<div style="height: 90px; widht: 250px; margin-top: 10px; display: flex;">
 				<div style=" background:purple; height: 82px; width: 80px;">
-					<img src="Fortnite.jpg" style="height:82px;width: 80px;">
+					<img src="fortnite.jpg" style="height:82px;width: 80px;">
 				</div>
 				<div style="height: 82px;width:192px">
 					<p>Fortnite</p>
